# crystalline

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  msi-backfill.yml  release.yml
action/: action.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/debian/: crystalline.default  crystalline.service
crates/cli/src/: cmd.rs  doctor.rs  hook.rs  install.rs  main.rs  receipt.rs  render.rs
crates/cli/tests/: configure.rs  data.rs  doctor.rs  env_domains.rs  env_token.rs  hook.rs  import.rs  install.rs  mcp_stub.rs  origin.rs  prompt.rs  provision.rs  service.rs  service_windows.rs  tags.rs  verify.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/snapshots/: prompt__prompt_copilot_format_matches_snapshot.snap  prompt__prompt_json_matches_snapshot.snap  prompt__prompt_json_read_only_matches_snapshot.snap  prompt__prompt_text_matches_snapshot.snap  prompt__prompt_text_read_only_matches_snapshot.snap
crates/cli/wix/: main.wxs
crates/core/: Cargo.toml
crates/core/src/: address.rs  config.rs  emit.rs  engram.rs  harness.rs  import.rs  lib.rs  manifest.rs  parse.rs  prompt.rs  schema.rs  tags.rs  temporal.rs  yaml.rs
crates/core/src/provision/: mod.rs  model.rs  receipt.rs  reconcile.rs  translate.rs
crates/core/src/verify/: format.rs  links.rs  manifest_rules.rs  mod.rs  quality.rs  report.rs  scanner.rs  schema_rules.rs  severity.rs  temporal.rs  util.rs
crates/core/tests/: address.rs  config.rs  editing.rs  manifest.rs  orchestrate.rs  provision.rs  reconcile.rs  roundtrip.rs  schema.rs  structure.rs  translate.rs  verify_smoke.rs
crates/core/tests/common/: mod.rs
crates/core/tests/snapshots/: structure__full-frontmatter.snap  structure__observations.snap  structure__schema-engram.snap  structure__unknown-keys-nested.snap
crates/index/: Cargo.toml
crates/index/src/: alias.rs  error.rs  factory.rs  lib.rs  store.rs  sync.rs  vocab.rs
crates/index/src/embed/: chunk.rs  local.rs  mod.rs  remote.rs
crates/index/src/postgres/: migrations.rs  mod.rs  search.rs
crates/index/src/turso/: migrations.rs  mod.rs  search.rs
crates/index/tests/: embed.rs  embed_model.rs  perf.rs  recovery.rs  retired.rs  salience.rs  store.rs  sync_phases.rs  sync_targeted.rs  turso_only.rs
crates/remote/: Cargo.toml
crates/remote/src/: archive.rs  changes.rs  error.rs  lib.rs  merge.rs  ops.rs  provider.rs  state.rs  token.rs
crates/remote/src/github/: auth.rs  mod.rs  types.rs
crates/remote/tests/: github_auth.rs  github_client.rs  lifecycle.rs
crates/remote/tests/mock/: mod.rs
crates/service/: Cargo.toml
crates/service/src/: client.rs  control.rs  daemon.rs  engine.rs  harness_cli.rs  instance.rs  lib.rs  mcp.rs  origin.rs  overlay.rs  params.rs  poller.rs  settings.rs  stub.rs  tool_schema.rs  toon.rs
crates/service/tests/: activity.rs  collaboration.rs  configure.rs  embed_tick.rs  http_stream.rs  mcp_collab.rs  mcp_instructions.rs  mcp_tools.rs  origin.rs  poller.rs  provision.rs  stub.rs  sync_denied.rs  toon_measurement.rs  virtual_domains.rs  watch_targeted.rs
crates/service/tests/support/: mod.rs
docs/: deployment.md  playbook.md
evals/skill-training/: README.md  drive.sh  eval_only.py  overnight-capture.sh  pyproject.toml  seed.py  train.py
evals/skill-training/configs/: capture.yaml  collaboration.yaml  memory.yaml  routing.yaml  schema.yaml
evals/skill-training/data/memory_split/: build.py
evals/skill-training/envs/: common.py
evals/skill-training/envs/crystalline_capture/: adapter.py  dataloader.py  rollout.py  scoring.py
evals/skill-training/envs/crystalline_collaboration/: adapter.py  dataloader.py  fake_github.py  rollout.py  scoring.py
evals/skill-training/envs/crystalline_memory/: adapter.py  (+2 more)
evals/skill-training/fixtures/: generate.py  generate.sh
examples/docker/: compose.git-sync.yaml  compose.postgres.yaml  compose.yaml  config.postgres.yaml
packaging/mcpb/: README.md  generate-manifest.sh
packaging/winget/: README.md
scripts/: package-release.sh  style-lint.sh
skills/crystalline-capture/: SKILL.md
skills/crystalline-collaboration/: SKILL.md
skills/crystalline-memory/: SKILL.md
skills/crystalline-routing/: SKILL.md
skills/crystalline-schema/: SKILL.md
tests/fixtures/canonical/: astronomy-reference.md  cross-domain-links.md  cross-domain-relation.md  duplicate-headings.md  forward-refs.md  full-frontmatter.md  gardening-guide.md  links-in-code.md  minimal-okf.md  multi-tag-observation.md  nested-bullets.md  nested-headings.md  no-frontmatter.md  observations-tags-context.md  product-runbook.md  quoted-relation.md  single-word-relation.md  temporal-absent-both.md  temporal-only-from.md  temporal-only-to.md  temporal-valid-from-after-to.md  unknown-keys-nested.md  wikilink-dedup.md
tests/fixtures/domain-bad/: .crystalline.yaml  CHECKLIST.md  MANIFEST.md  RUNBOOK.md  bad-permalink-and-tags.md  bom.md  cross-domain-issues.md  dangling-schema-ref.md  domain-prefixed-permalink.md  dup-permalink-a.md  dup-permalink-b.md  dup-title-a.md  dup-title-b.md  expected-issues.json  frontmatter-invalid.md  link-broken-and-self.md  missing-required-fields.md  null-byte.md  quality-dup-heading.md  quality-empty.md  quality-near-miss.md  quality-similar-sections.md  quality-token-budget.md  schema-malformed-declaration.md  schema-missing-entity-and-mapping.md  schema-task.md  schema-violation-task-2.md  schema-violation-task.md  temporal-bad-dates.md  temporal-confidence-and-sentinel.md  temporal-range-invalid.md  temporal-required-missing.md  temporal-status-superseded.md  temporal-status-unrecommended.md
tests/fixtures/domain-good/: MANIFEST.md  companion-planting.md  phobos.md  ship-vent-driver.md  task-schema.md
tests/fixtures/errors/: bom.md  broken-yaml.md  null-byte.md
tests/fixtures/lossless/: comma-string-tags.md  reordered-frontmatter.md
tests/fixtures/manifests/: manifest-invalid.md  manifest-valid.md
tests/fixtures/prompt-fixture/: config.yaml
tests/fixtures/schemas/: conforming-engram.md  schema-task.md  violating-engram.md
(+119 files in other folders)
