[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/index",
    "crates/remote",
    "crates/service",
    "crates/cli",
]

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.96"
repository = "https://github.com/jordiboehme/crystalline"

[workspace.dependencies]
crystalline-core = { path = "crates/core" }
# default-features off here so every dependent opts in to `local-embeddings`
# explicitly; `cargo build --workspace --no-default-features` then drops candle
# from the whole build rather than pulling it back in through a dependency edge.
crystalline-index = { path = "crates/index", default-features = false }
crystalline-remote = { path = "crates/remote" }
crystalline-service = { path = "crates/service" }

clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
rmcp = "2.1.0"
turso = "0.6.1"
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
# Blocking downloader over ureq, whose bundled rustls avoids any system OpenSSL
# so the static release binaries stay self-contained. The local provider loads
# and runs off the async runtime.
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
# Pure-Rust regex backend (fancy-regex) instead of the onig C library, and no
# esaxx C++ trainer or progress bar; keeps musl static builds clean. Only the
# JSON tokenizer load and encode paths are used.
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
pulldown-cmark = "0.13.4"
# The PostgreSQL backend. `tls-rustls` shares reqwest's rustls (ring provider)
# rather than pulling OpenSSL, so the musl static release binaries stay
# self-contained; the runtime query API is used (no compile-time macros) so no
# live database is needed at build time. Gated behind the `postgres` feature.
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
pgvector = { version = "0.4.2", default-features = false, features = ["sqlx"] }
notify = "8.2.0"
interprocess = "2.4.2"
sha2 = "0.11.0"
chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
indexmap = "2.14.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
fs4 = "1.1.0"
axum = "0.8.9"
libc = "0.2.180"
serde_yaml_ng = "0.10.0"
async-trait = "0.1.89"
uuid = { version = "1.23.4", features = ["v4"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
etcetera = "0.11.0"
walkdir = "2.5.0"
globset = "0.4.18"
schemars = "1.2.1"
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# GitHub collaboration (crates/remote): plain-text three-way merge, the
# GitHub-issued token in the OS keychain and repository tarball extraction.
diffy = "0.5.0"
# `v1` pulls in exactly the apple-native (Keychain), windows-native and
# zbus-secret-service (pure-Rust, no libdbus) backends; the 0600 file fallback
# in crates/remote covers everything else (headless Linux without a session
# bus, CI).
keyring = { version = "4.1.3", default-features = false, features = ["v1"] }
# keyring 4.1.3's v1 feature never actually installs a default store (see
# "Known upstream workarounds" in CLAUDE.md); crates/remote installs the
# platform-native store itself through this crate directly.
keyring-core = "1.0.0"
# The platform-native keyring-core stores keyring-core needs installed as its
# default (see the keyring-core comment above); crates/remote gates each one
# behind the matching target cfg.
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
windows-native-keyring-store = "1.1.0"
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }
tar = "0.4.46"
flate2 = "1.1.9"
base64 = "0.22.1"

insta = { version = "1.48.0", features = ["yaml"] }
assert_cmd = "2.2.2"
tempfile = "3.27.0"
