[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/index",
    "crates/remote",
    "crates/service",
    "crates/cli",
]

[workspace.package]
version = "0.9.1"
authors = ["Jordi Boehme <jordi@boehme-lopez.de>"]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.96"
repository = "https://github.com/jordiboehme/crystalline"

[workspace.dependencies]
crystalline-core = { path = "crates/core" }
# default-features off here so every dependent opts in to `local-embeddings`
# explicitly; `cargo build --workspace --no-default-features` then drops candle
# from the whole build rather than pulling it back in through a dependency edge.
crystalline-index = { path = "crates/index", default-features = false }
crystalline-remote = { path = "crates/remote" }
crystalline-service = { path = "crates/service" }

clap = { version = "4.6.2", features = ["derive"] }
tokio = { version = "1.53.0", features = ["full"] }
rmcp = "2.2.0"
turso = "0.7.0"
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
# Blocking downloader over ureq. The base build bundles rustls so static Linux
# binaries stay self-contained; crates/index adds the native-tls feature on
# Windows and macOS targets so the download validates against the OS trust
# store (corporate TLS-interception CAs live there, not in webpki roots).
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
# Pure-Rust regex backend (fancy-regex) instead of the onig C library, and no
# esaxx C++ trainer or progress bar; keeps musl static builds clean. Only the
# JSON tokenizer load and encode paths are used.
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
pulldown-cmark = "0.13.4"
# The PostgreSQL backend. `tls-rustls` shares reqwest's rustls (ring provider)
# rather than pulling OpenSSL, so the musl static release binaries stay
# self-contained; the runtime query API is used (no compile-time macros) so no
# live database is needed at build time. Gated behind the `postgres` feature.
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
pgvector = { version = "0.4.2", default-features = false, features = ["sqlx"] }
notify = "8.2.0"
interprocess = "2.4.2"
sha2 = "0.11.0"
chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
indexmap = "2.14.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
fs4 = "1.1.0"
axum = "0.8.9"
libc = "0.2.186"
serde_yaml_ng = "0.10.0"
toml = "1.1.3"
async-trait = "0.1.89"
uuid = { version = "1.24.0", features = ["v4"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
etcetera = "0.11.0"
walkdir = "2.5.0"
globset = "0.4.19"
schemars = "1.2.1"
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

# GitHub collaboration (crates/remote): plain-text three-way merge, the
# GitHub-issued token in the OS keychain and repository tarball extraction.
diffy = "0.5.0"
# `v1` pulls in exactly the apple-native (Keychain), windows-native and
# zbus-secret-service (pure-Rust, no libdbus) backends; the 0600 file fallback
# in crates/remote covers everything else (headless Linux without a session
# bus, CI).
keyring = { version = "4.1.5", default-features = false, features = ["v1"] }
tar = "0.4.46"
flate2 = "1.1.9"
base64 = "0.22.1"

insta = { version = "1.48.0", features = ["yaml"] }
assert_cmd = "2.2.2"
tempfile = "3.27.0"
# o200k_base tokenizer for the TOON vs JSON payload measurement test; pulls no
# serde_json (verified against its crates.io dependency list), so it cannot
# reintroduce the preserve_order feature into this workspace.
tiktoken-rs = "0.12.0"

# Dev and test builds carry line tables only: panics and backtraces keep
# file:line, links across the 45 integration-test binaries stay fast and the
# target directory stays a fraction of full-DWARF size. Interactive debugger
# variable inspection is the one thing this costs; release builds are
# untouched.
[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
