[package]
name = "crystalline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local-first knowledge management for humans and AI agents."

[[bin]]
name = "crystalline"
path = "src/main.rs"

[features]
# Forwarded to crystalline-index so `--no-default-features` on the workspace
# drops candle from the binary while everything still compiles and text search,
# the remote provider and chunking keep working.
default = ["local-embeddings"]
local-embeddings = ["crystalline-index/local-embeddings"]

[dependencies]
crystalline-service = { workspace = true }
crystalline-index = { workspace = true }
crystalline-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = "3.1.4"
tempfile = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
