[package]
name = "crystalline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Local-first knowledge management for humans and AI agents."

[[bin]]
name = "crystalline"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Jordi Boehme <jordi@boehme-lopez.de>"
copyright = "2026, Jordi Boehme <jordi@boehme-lopez.de>"
license-file = ["../../LICENSE", "4"]
section = "utils"
priority = "optional"
# Static musl binary: no shared-library dependencies to auto-detect, so this
# stays empty rather than the "$auto" default.
depends = ""
extended-description = """
Crystalline gives an AI agent the capability to learn and evolve instead of \
starting from zero in every session. An agent is onboarded via a generated \
routing prompt, taught information through curated domains and stores its \
learnings and experiences as engrams while it works - becoming a useful and \
productive peer over time."""
assets = [
    ["target/release/crystalline", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/crystalline/README.md", "644"],
    ["../../docs/deployment.md", "usr/share/doc/crystalline/docs/deployment.md", "644"],
    ["../../LICENSE", "usr/share/doc/crystalline/LICENSE", "644"],
]

[features]
# Forwarded to crystalline-index so `--no-default-features` on the workspace
# drops candle and sqlx from the binary while everything still compiles and text
# search, the remote provider and chunking keep working over Turso.
default = ["local-embeddings", "postgres"]
local-embeddings = ["crystalline-index/local-embeddings"]
postgres = ["crystalline-index/postgres"]

[dependencies]
crystalline-service = { workspace = true }
crystalline-index = { workspace = true }
crystalline-core = { workspace = true }
# Only `connect github` (inherently local: signing in is machine identity, not
# content) uses this crate directly. Every other origin verb routes through
# crystalline-service's socket-first client entry points, never linking this
# crate for its in-process fallback.
crystalline-remote = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = "3.1.4"
tempfile = { workspace = true }
serde_json = { workspace = true }
insta = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
