[package]
name = "crystalline-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Format, parsing and static verification primitives for Crystalline. No async, database or ML dependencies."

[lib]
name = "crystalline_core"
path = "src/lib.rs"

[dependencies]
