[package]
name = "crystalline-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Format, parsing and static verification primitives for Crystalline. No async, database or ML dependencies."

[lib]
name = "crystalline_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
etcetera = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
