[package]
name = "crystalline-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Storage and search index for Crystalline: the Store trait, the embedded database and the embedding pipeline."

[lib]
name = "crystalline_index"
path = "src/lib.rs"

[dependencies]
crystalline-core = { workspace = true }
turso = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
