[package]
name = "crystalline-index"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Storage and search index for Crystalline: the Store trait, the embedded database and the embedding pipeline."

[lib]
name = "crystalline_index"
path = "src/lib.rs"

[features]
# Both on by default so the shipped binary embeds locally with no external
# service and can honor `backend: postgres` at runtime. `--no-default-features`
# drops candle and sqlx entirely for a lean, Turso-only build.
default = ["local-embeddings", "postgres"]
local-embeddings = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]
# The PostgreSQL backend: the sqlx pool, pgvector and the parallel store module.
# Runtime is selected from config, so a release binary must carry this to honor
# `backend: postgres` at all; `--no-default-features` produces a Turso-only
# build that drops sqlx.
postgres = ["dep:sqlx", "dep:pgvector"]

[dependencies]
crystalline-core = { workspace = true }
turso = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

# Local embedding stack, gated by `local-embeddings`. CPU only (no metal or cuda
# features) so the release artifacts stay portable static binaries.
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }

# PostgreSQL backend, gated by `postgres`. The runtime query API only, so no
# live database is needed at build time and the trait object stays object-safe.
sqlx = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }

# On Windows and macOS the model download must trust the OS certificate store
# (corporate TLS-intercepting proxies install their CA there; the bundled
# webpki roots reject it with UnknownIssuer). hf-hub's native-tls feature
# flips its ureq agent to schannel / Security.framework on these targets.
# Linux keeps the bundled rustls roots so musl static builds stay
# self-contained.
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
hf-hub = { workspace = true, optional = true, features = ["native-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
