[package]
name = "crystalline-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GitHub-backed team collaboration plumbing for Crystalline: the provider trait, the merge engine and origin state. Git itself is an implementation detail hidden from users."

[lib]
name = "crystalline_remote"
path = "src/lib.rs"

[dependencies]
crystalline-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
