[package]
name = "crystalline-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GitHub-backed team collaboration plumbing for Crystalline: the provider trait, the merge engine and origin state. Git itself is an implementation detail hidden from users."

[lib]
name = "crystalline_remote"
path = "src/lib.rs"

[dependencies]
crystalline-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
