[package]
name = "crystalline-remote"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GitHub-backed team collaboration plumbing for Crystalline: the provider trait, the merge engine and origin state. Git itself is an implementation detail hidden from users."

[lib]
name = "crystalline_remote"
path = "src/lib.rs"

[dependencies]
crystalline-core = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
keyring-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# The platform-native keyring-core stores, installed directly as a
# workaround for keyring 4.1.3's v1 feature never installing a default
# store itself; see "Known upstream workarounds" in CLAUDE.md.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[dev-dependencies]
axum = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
