[package]
name = "crystalline-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Single-instance daemon and MCP server for Crystalline: lock and socket ownership, the file watcher, and the tool router."

[lib]
name = "crystalline_service"
path = "src/lib.rs"

[features]
# Forwarded to crystalline-index so a `--no-default-features` workspace build
# drops candle and sqlx while the daemon still compiles and serves text search
# over Turso.
default = ["local-embeddings", "postgres"]
local-embeddings = ["crystalline-index/local-embeddings"]
postgres = ["crystalline-index/postgres"]

[dependencies]
crystalline-core = { workspace = true }
crystalline-index = { workspace = true }
crystalline-remote = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "client",
    "macros",
    "transport-async-rw",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
] }
interprocess = { workspace = true, features = ["tokio"] }
fs4 = { workspace = true }
notify = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_yaml_ng = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
